--- a/package.json
+++ b/package.json
@@ -14,9 +14,11 @@
     "@emotion/styled": "^11.11.5",
     "@mui/material": "^5.15.15",
     "@react-google-maps/api": "^2.19.3",
+    "@reduxjs/toolkit": "^2.2.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^5.0.1",
+    "react-redux": "^9.1.1",
     "react-router-dom": "^6.22.3",
     "react-slick": "^0.30.2",
     "slick-carousel": "^1.8.1",
