--- a/.env
+++ b/.env
@@ -1,1 +1,1 @@
-VITE_BASE_URL=http://cyberspacelte.greenmouseacademy.com.ng/public/api
+VITE_BASE_URL=https://cyberspacelte.greenmouseacademy.com.ng/public/api
