--- a/package.json
+++ b/package.json
@@ -19,7 +19,9 @@
     "@tanem/react-nprogress": "^5.0.51",
     "@tanstack/react-query": "^4.36.1",
     "@tanstack/react-query-devtools": "^4.36.1",
+    "animate.css": "^4.1.1",
     "axios": "^1.6.8",
+    "framer-motion": "^11.1.9",
     "nprogress": "^0.2.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
