--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "animate.css": "^4.1.1",
     "axios": "^1.6.8",
     "framer-motion": "^11.1.9",
+    "naija-state-local-government": "^1.1.2",
     "nprogress": "^0.2.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
