base url updated

--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
-VITE_BASE_URL=https://cyberspacelte.greenmouseacademy.com.ng/public/api
+VITE_BASE_URL=https://cyberspacelte.greenmouseacademy.com.ng/api
 VITE_CYBERPAY_KEY=078b48a5c64442ddb63ac3d1f0604153
